data/all_generated_tests/raw_wast_tests/call_StackCorruption_3247.wast
;; 6. **Test Description**: Call a function with arguments that are results of complex arithmetic operations.    - **Constraint**: Tests fine-grained control over stack manipulation during argument preparation.    - **Relation to Stack Corruption**: Confirms that computational results maintain stack integrity when passed as arguments.

(assert_invalid
  (module
    (func $complex-arguments
      (call 0 (i32.add (i32.const 10) (i32.const 20)))
    )
    (func (param i32 f64)) 
  )
  "type mismatch"
)